docs: streamline README